--- a/views/home1.hbs
+++ b/views/home1.hbs
@@ -76,30 +76,27 @@
   </div>
 </div>
 
+{{! price start }}
 <div class="dcviet_vn-section">
   <div class="container">
     <div class="row justify-content-center text-center mb-5">
-      {{#if contentsData.content1}}
+     
         <div class="col-lg-6">
-          <h2
-            class="section-title text-center mb-3"
-          >{{contentsData.content1.title}}</h2>
-          <p>{{contentsData.content1.subject}}</p>
+          <h2 class="section-title text-center mb-3">{{content1.title}}</h2>
+          <p>{{content1.subject}}</p>
         </div>
-      {{/if}}
+     
     </div>
-
     <div class="row">
 
-      {{#each getRoomLists}}
+      {{#each roomList}}
         <div class="col-6 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
           <div class="media-1">
             <a href="#" class="d-block mb-3"><img
-                src="{{imagePath}}"
+                src="{{this.imagePath}}"
                 alt="{{imageAlt}}"
                 class="img-fluid"
-              />
-            </a>
+              /></a>
             <span class="d-flex align-items-center loc mb-2">
               <span class="icon-room mr-3"></span>
               <span>{{roomTitle}}</span>
@@ -121,39 +118,112 @@
     </div>
   </div>
 </div>
+{{! price end }}
 
+{{! space start }}
 <div class="dcviet_vn-section">
   <div class="container">
     <div class="row text-center justify-content-center mb-5">
-      {{#if contentsData.content2}}
+      {{#if content2}}
         <div class="col-lg-7">
-          <h2
-            class="section-title text-center"
-          >{{contentsData.content2.title}}</h2>
+          <h2 class="section-title text-center">{{content2.title}}</h2>
         </div>
       {{/if}}
     </div>
 
     <div class="owl-carousel owl-3-slider">
 
-      {{#each getRoomLists}}
-        <div class="item">
-          <a class="media-thumb" href="{{imagePath}}" data-fancybox="gallery">
-            <div class="media-text">
-              <h3>{{roomTitle}}</h3>
-              <span class="location">View 1</span>
-            </div>
-            <img src="{{imagePath}}" alt="{{imageAlt}}" class="img-fluid" />
-          </a>
-        </div>
-      {{/each}}
+      <div class="item">
+        <a
+          class="media-thumb"
+          href="images/hero-slider-1.jpg"
+          data-fancybox="gallery"
+        >
+          <div class="media-text">
+            <h3>Không gian 1</h3>
+            <span class="location">View 1</span>
+          </div>
+          <img src="images/hero-slider-1.jpg" alt="Image" class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="item">
+        <a
+          class="media-thumb"
+          href="images/hero-slider-2.jpg"
+          data-fancybox="gallery"
+        >
+          <div class="media-text">
+            <h3>Không gian 2</h3>
+            <span class="location">View 2</span>
+          </div>
+          <img src="images/hero-slider-2.jpg" alt="Image" class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="item">
+        <a
+          class="media-thumb"
+          href="images/hero-slider-3.jpg"
+          data-fancybox="gallery"
+        >
+          <div class="media-text">
+            <h3>Không gian 3</h3>
+            <span class="location">View 3</span>
+          </div>
+          <img src="images/hero-slider-3.jpg" alt="Image" class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="item">
+        <a
+          class="media-thumb"
+          href="images/hero-slider-4.jpg"
+          data-fancybox="gallery"
+        >
+          <div class="media-text">
+            <h3>Không gian 4</h3>
+            <span class="location">View 4</span>
+          </div>
+          <img src="images/hero-slider-4.jpg" alt="Image" class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="item">
+        <a
+          class="media-thumb"
+          href="images/hero-slider-5.jpg"
+          data-fancybox="gallery"
+        >
+          <div class="media-text">
+            <h3>Không gian 5</h3>
+            <span class="location">View 5</span>
+          </div>
+          <img src="images/hero-slider-5.jpg" alt="Image" class="img-fluid" />
+        </a>
+      </div>
+
+      <div class="item">
+        <a
+          class="media-thumb"
+          href="images/hero-slider-1.jpg"
+          data-fancybox="gallery"
+        >
+          <div class="media-text">
+            <h3>Không gian 6</h3>
+            <span class="location">View 6</span>
+          </div>
+          <img src="images/hero-slider-2.jpg" alt="Image" class="img-fluid" />
+        </a>
+      </div>
 
     </div>
 
   </div>
 </div>
+{{! space end }}
 
-
+{{! article start }}
 <div class="dcviet_vn-section">
   <div class="container">
     <div class="row justify-content-between align-items-center">
@@ -175,10 +245,10 @@
           />
         </figure>
       </div>
-      {{#if contentsData.content3}}
+      {{#if content3}}
         <div class="col-lg-5">
-          <h2 class="section-title text-left mb-4">{{contentsData.content3.title}}</h2>
-          <p>{{contentsData.content3.subject}}</p>
+          <h2 class="section-title text-left mb-4">{{content3.title}}</h2>
+          <p>{{content3.subject}}</p>
           <p><a href="#" class="btn btn-primary">Đọc tiếp ..</a></p>
 
         </div>
@@ -186,31 +256,39 @@
     </div>
   </div>
 </div>
+{{! article end }}
 
-
+{{! blog start }}
 <div class="dcviet_vn-section">
   <div class="container">
     <div class="row mb-5 justify-content-center">
-      {{#if contentsData.content4}}
+      {{#if content4}}
         <div class="col-lg-6 text-center">
-          <h2 class="section-title text-center mb-3">{{contentsData.content4.title}}</h2>
-          <p>{{contentsData.content4.subject}}</p>
+          <h2 class="section-title text-center mb-3">{{content4.title}}</h2>
+          <p>{{content4.subject}}</p>
         </div>
       {{/if}}
     </div>
-
     <div class="row align-items-stretch">
       <div class="col-lg-4 order-lg-1">
         <div class="h-100">
           <div class="frame h-100">
-            <div class="feature-img-bg h-100" style="background-image: url('images/hero-slider-1.jpg');"></div>
+            <div
+              class="feature-img-bg h-100"
+              style="background-image: url('images/hero-slider-1.jpg');"
+            >
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1">
+      <div
+        class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1"
+      >
+
         <div class="feature-1 d-md-flex">
           <div class="align-self-center">
+            <!-- <span class="flaticon-house display-4 text-primary"></span> -->
             <h3>Câu Chuyện Về Những Người Bạn Đã Từng Ghé Thăm</h3>
             <p class="mb-0">Mỗi vị khách đến với homestay đều mang theo một câu
               chuyện riêng. Có người tìm đến ..</p>
@@ -218,8 +296,9 @@
           </div>
         </div>
 
-        <div class="feature-1 d-md-flex">
-          <div class="align-self-center">          
+        <div class="feature-1">
+          <div class="align-self-center">
+            <!-- <span class="flaticon-house display-4 text-primary"></span> -->
             <h3>Món Ngon Tại Homestay – Ẩm Thực Đậm Đà Hương Vị Quê</h3>
             <p class="mb-0">Không cần tìm kiếm những món ăn sang trọng, chỉ cần
               một chén cơm nóng, đĩa rau ..</p>
@@ -229,9 +308,13 @@
 
       </div>
 
-      <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-3">
+      <div
+        class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-3"
+      >
+
         <div class="feature-1 d-md-flex">
-          <div class="align-self-center">       
+          <div class="align-self-center">
+            <!-- <span class="flaticon-house display-4 text-primary"></span> -->
             <h3>Góc Nhỏ Yêu Thích Tại Homestay Mà Bạn Sẽ Thích Mê</h3>
             <p class="mb-0">Mỗi góc nhỏ tại homestay đều có một câu chuyện riêng
               – từ chiếc ghế gỗ cũ kỹ nơi góc vườn ..</p>
@@ -240,7 +323,8 @@
         </div>
 
         <div class="feature-1 d-md-flex">
-          <div class="align-self-center">      
+          <div class="align-self-center">
+            <!-- <span class="flaticon-house display-4 text-primary"></span> -->
             <h3>Mẹo Chuẩn Bị Hành Lý Nhẹ Nhàng Khi Đến Homestay</h3>
             <p class="mb-0">Đi nghỉ ngơi tại homestay không cần phải chuẩn bị
               quá nhiều ..</p>
@@ -253,17 +337,25 @@
     </div>
   </div>
 </div>
+{{! blog end }}
 
+{{! quote start }}
 <div class="py-5 cta-section">
   <div class="container">
     <div class="row text-center">
-      {{#if contentsData.content5}}
+      {{#if content5}}
         <div class="col-md-12">
-          <h2 class="mb-2 text-white">{{contentsData.content5.title}}</h2>
-          <p class="mb-4 lead text-white text-white-opacity">{{contentsData.content5.subject}}</p>
-          <p class="mb-0"><a href="#" class="btn btn-outline-white text-white btn-md font-weight-bold">Đặt phòng ngay!</a></p>
+          <h2 class="mb-2 text-white">{{content5.title}}</h2>
+          <p
+            class="mb-4 lead text-white text-white-opacity"
+          >{{content5.subject}}</p>
+          <p class="mb-0"><a
+              href="#"
+              class="btn btn-outline-white text-white btn-md font-weight-bold"
+            >Đặt phòng ngay!</a></p>
         </div>
       {{/if}}
     </div>
   </div>
 </div>
+{{! quote end }}
